Add authenticated middleware
