# src/routes/AuthRoute.js
@@ -1,6 +1,6 @@
 import express from "express"
-import { LoginUserByUsernameOrEmail, registerUserManually, verifyEmailForForgotPass } from "../controllers/AuthenticateController.js"
-import { loginRequestValidator, registerRequestValidator, verifyEmailRequest } from "../request/authRequestValidator.js"
+import { LoginUserByUsernameOrEmail, registerUserManually, updatePassword, verifyEmailForForgotPass, verifyTokenForForgotPass } from "../api/v1/AuthenticateController.js"
+import { loginRequestValidator, passwordResetValidation, registerRequestValidator, verifyEmailRequest } from "../request/authRequestValidator.js"
 import { requestValidator } from "../middleware/requestValidator.js"
 
 // get router function from express
@@ -10,6 +10,8 @@ const router = express.Router()
 router.post('/signup' , registerRequestValidator , requestValidator , registerUserManually)
 router.post('/signin' , loginRequestValidator , requestValidator, LoginUserByUsernameOrEmail)
 router.post('/forgot-password/email-verify' , verifyEmailRequest, requestValidator , verifyEmailForForgotPass)
+router.post('/forgot-password/token-verify', verifyTokenForForgotPass)
+router.post('/forgot-password/password-reset' , passwordResetValidation , requestValidator, updatePassword)
 
 
 // export router for useages
